--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8888
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#server.port=8888
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
 management.endpoints.web.exposure.include=*
 management.security.enabled = false
